# pysam

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CONTRIBUTING.md  LICENSE  PVsamv1Tools.ipynb  README.md  RELEASE.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build_conda.sh  build_manylinux.sh  build_unix.sh  build_win.bat  build_win_sj.bat  cmake_install.cmake  prepare_build.py  pyproject.toml  setup.py
Examples/: FetchResourceFileExample.py  PVsamv1Tools.ipynb  PySAMWorkshop.ipynb  UtilityRatesExample.py  nsrdb_data_query_response_39.75_-105.22.json
PySAM/: Battery.pyi  Biomass.pyi  EtesElectricResistance.pyi  Fuelcell.pyi  Hcpv.pyi  HostDeveloper.pyi  Levpartflip.pyi  Sco2CspSystem.pyi  SingleownerHeat.pyi  TroughPhysicalIph.pyi  version_differ.py
conda/: meta.yaml
docs/: PySSC.rst  building-pysam.rst  conf.py  defaults.rst  examples.rst  getting-help.rst  getting-started.rst  helper-tools.rst  index.rst  interdependent-variables.rst  overview.rst  pyssc-for-dao-tk.rst  readme.md  requirements.txt  variables-sam.rst  versions.rst
files/: Battery.cp311-win_amd64.pyd  BatteryStateful.cp311-win_amd64.pyd  BatteryTools.py  Battwatts.cp311-win_amd64.pyd  Belpe.cp311-win_amd64.pyd  Biomass.cp311-win_amd64.pyd  Cashloan.cp311-win_amd64.pyd  CashloanHeat.cp311-win_amd64.pyd  CbConstructionFinancing.cp311-win_amd64.pyd  CbEmpiricalHceHeatLoss.cp311-win_amd64.pyd  Communitysolar.cp311-win_amd64.pyd  CspDsgLfUi.cp311-win_amd64.pyd  CspHeatsink.cp311-win_amd64.pyd  CspSubcomponent.cp311-win_amd64.pyd  Equpartflip.cp311-win_amd64.pyd  (+80 more)
(+81 files in other folders)
